--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ header{
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   padding-top: 2rem;
   color: rgb(250, 250, 250);
 }
